code>modify.fix: fix scrollbar style inconformity on Mac and Windows

--- a/css/tagmark.css
+++ b/css/tagmark.css
@@ -3,6 +3,28 @@
     --tag--max-witdh: auto;
 }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 8px;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 8px;
+}
+
 a {
     color: white;
 }
